--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.4.2"
+    "chokidar": "^3.5.2",
+    "npm-run-all": "^4.1.5",
+    "vite": "^2.4.2",
+    "vue-route-generator": "^1.0.0",
+    "vue-router": "4"
   }
 }
