--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "chokidar": "^3.5.2",
     "npm-run-all": "^4.1.5",
     "vite": "^2.4.2",
+    "vite-plugin-pwa": "^0.8.1",
     "vue-global-api": "^0.1.3",
     "vue-route-generator": "^1.0.0",
-    "vue-router": "4"
+    "vue-router": "4",
+    "workbox-window": "^6.1.5"
   }
 }
