--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "dev": "run-p dev:*",
-    "dev:vite": "vite",
-    "dev:routify": "node routify.js -w",
-    "build": "node routify.js && vite build",
+    "dev": "vite",
+    "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -13,13 +11,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
-    "chokidar": "^3.5.2",
-    "npm-run-all": "^4.1.5",
     "vite": "^2.4.2",
-    "vite-plugin-pwa": "^0.8.1",
+    "vite-plugin-pages": "^0.15.1",
     "vue-global-api": "^0.1.3",
-    "vue-route-generator": "^1.0.0",
-    "vue-router": "4",
-    "workbox-window": "^6.1.5"
+    "vue-router": "^4.0.10"
   }
 }
