--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vueuse/head": "^0.6.0",
     "vite": "^2.4.2",
     "vite-plugin-pages": "^0.15.1",
     "vue-global-api": "^0.1.3",
