--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/head": "^0.6.0",
     "vite": "^2.4.2",
     "vite-plugin-pages": "^0.15.1",
+    "vite-plugin-vue-layouts": "^0.3.1",
     "vue-global-api": "^0.1.3",
     "vue-router": "^4.0.10"
   }
