--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/compiler-sfc": "^3.0.5",
     "@vueuse/head": "^0.6.0",
     "vite": "^2.4.2",
+    "vite-plugin-components": "^0.13.0",
     "vite-plugin-pages": "^0.15.1",
     "vite-plugin-vue-layouts": "^0.3.1",
     "vue-global-api": "^0.1.3",
