--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@vue/compiler-sfc": "^3.0.5",
     "vite": "^2.4.2",
     "vite-plugin-pages": "^0.15.1",
+    "vite-plugin-windicss": "^1.2.5",
     "vue-global-api": "^0.1.3",
-    "vue-router": "^4.0.10"
+    "vue-router": "^4.0.10",
+    "windicss": "^3.1.5"
   }
 }
