--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
+  "name": "coba-vite-vue",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "@vueuse/head": "^0.7.6",
+    "vite-plugin-md": "^0.13.1",
+    "vite-plugin-pages": "^0.23.0",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.5",
-    "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.4.2",
-    "vite-plugin-pages": "^0.15.1",
-    "vite-plugin-windicss": "^1.2.5",
-    "vue-global-api": "^0.1.3",
-    "vue-router": "^4.0.10",
-    "windicss": "^3.1.5"
+    "@vitejs/plugin-vue": "^2.3.1",
+    "vite": "^2.9.7"
   }
 }
