--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-vue-layouts": "^0.6.0",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "vue-router-prefetch": "2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
