--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node afterBuild.mjs",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@vitejs/plugin-legacy": "^1.8.2",
     "@vueuse/head": "^0.7.6",
     "autoprefixer": "^10.4.7",
     "markdown-it-prism": "^2.2.4",
