--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite-plugin-vue-layouts": "^0.6.0",
     "vite-plugin-yaml2": "^0.0.4",
     "vue": "^3.2.25",
+    "vue-lazyload": "3.0.0-rc.2",
     "vue-router": "^4.0.15",
     "vue-router-prefetch": "2"
   },
