--- a/package.json
+++ b/package.json
@@ -1,33 +1,41 @@
 {
-  "name": "coba-vite-vue",
+  "name": "baru",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node afterBuild.mjs",
+    "build": "vue-tsc --noEmit && vite build && tsx script/afterBuild.ts",
+    "build:ssg": "npm run build && presite dist",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@unocss/reset": "^0.35.0",
-    "@unocss/transformer-directives": "^0.35.1",
-    "@vitejs/plugin-legacy": "^1.8.2",
-    "@vueuse/head": "^0.7.6",
-    "markdown-it-prism": "^2.2.4",
-    "prism-theme-vars": "^0.2.2",
-    "unocss": "^0.34.1",
-    "vite-plugin-md": "^0.13.1",
-    "vite-plugin-pages": "^0.23.0",
-    "vite-plugin-pages-sitemap": "^1.2.2",
-    "vite-plugin-vue-inspector": "^1.0.1",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vite-plugin-yaml2": "^0.0.4",
-    "vue": "^3.2.25",
-    "vue-lazyload": "3.0.0-rc.2",
-    "vue-router": "^4.0.15",
-    "vue-router-prefetch": "2"
+    "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@unocss/reset": "^0.39.3",
+    "@unocss/transformer-directives": "^0.39.3",
+    "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^2.3.1",
-    "vite": "^2.9.7"
+    "@vueuse/head": "^0.7.6",
+    "happy-dom": "^5.3.1",
+    "markdown-it": "^13.0.1",
+    "markdown-it-prism": "^2.2.4",
+    "presite": "^2.1.2",
+    "prism-theme-vars": "^0.2.3",
+    "prismjs": "^1.28.0",
+    "tsx": "^3.6.0",
+    "typescript": "^4.5.4",
+    "unocss": "^0.39.3",
+    "vite": "^2.9.7",
+    "vite-plugin-md": "^0.18.1",
+    "vite-plugin-pages": "^0.24.2",
+    "vite-plugin-pages-sitemap": "^1.2.2",
+    "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-plugin-yaml2": "^1.0.0",
+    "vue-lazyload": "3.0.0-rc.2",
+    "vue-router": "^4.0.16",
+    "vue-router-prefetch": "2",
+    "vue-tsc": "^0.34.7"
   }
 }
